--- a/Liberation Day.Rmd
+++ b/Liberation Day.Rmd
@@ -134,7 +134,7 @@ Trend and Residual decompositions are created for the Time Series for Liberation
 loess_nvda<-loess(adjusted~as.numeric(date),data=nvda_data,span=nvda_optimal_span)
 smooth_nvda<-predict(loess_nvda)
 trend_decomp_nvda_plot<-nvda_data|>ggplot(aes(x=date))+geom_line(aes(y=smooth_nvda),color="red",linewidth=1.4) +
-                                   labs(title="NVDA Trend Decomposition",x="Date",y="Stock Price")+theme_minimal()
+                                   labs(title="NVDA Trend Decomposition",x="Date",y="Stock Price (USD)")+theme_minimal()
 trend_decomp_nvda_plot
 nvda_data$residual_decomp<-residuals(loess_nvda)
 residual_decomp_nvda_plot<-nvda_data|>ggplot(aes(x=date,y=residual_decomp))+geom_line() +
@@ -147,7 +147,7 @@ nvda_data
 loess_amzn<-loess(adjusted~as.numeric(date),data=amzn_data,span=amzn_optimal_span)
 smooth_amzn<-predict(loess_amzn)
 trend_decomp_amzn_plot<-amzn_data|>ggplot(aes(x=date))+geom_line(aes(y=smooth_amzn),color="red",linewidth=1.4) +
-                                   labs(title="AMZN Trend Decomposition",x="Date",y="Stock Price") +
+                                   labs(title="AMZN Trend Decomposition",x="Date",y="Stock Price (USD)") +
                                    theme_minimal()
 trend_decomp_amzn_plot
 amzn_data$residual_decomp<-residuals(loess_amzn)
@@ -161,7 +161,7 @@ amzn_data
 loess_brkb<-loess(adjusted~as.numeric(date),data=brkb_data,span=brkb_optimal_span)
 smooth_brkb<-predict(loess_brkb)
 trend_decomp_brkb_plot<-brkb_data|>ggplot(aes(x=date))+geom_line(aes(y=smooth_brkb),color="red",linewidth=1.4) +
-                                   labs(title="BRKB Trend Decomposition",x="Date",y="Stock Price") +
+                                   labs(title="BRKB Trend Decomposition",x="Date",y="Stock Price (USD)") +
                                    theme_minimal()
 trend_decomp_brkb_plot
 brkb_data$residual_decomp<-residuals(loess_brkb)
@@ -175,7 +175,7 @@ brkb_data
 loess_tsla<-loess(adjusted~as.numeric(date),data=tsla_data,span=tsla_optimal_span)
 smooth_tsla<-predict(loess_tsla)
 trend_decomp_tsla_plot<-tsla_data|>ggplot(aes(x=date))+geom_line(aes(y=smooth_tsla),color="red",linewidth=1.4) +
-                                   labs(title="TSLA Trend Decomposition",x="Date",y="Stock Price") +
+                                   labs(title="TSLA Trend Decomposition",x="Date",y="Stock Price (USD)") +
                                    theme_minimal()
 trend_decomp_tsla_plot
 tsla_data$residual_decomp<-residuals(loess_tsla)
@@ -189,7 +189,7 @@ tsla_data
 loess_wmt<-loess(adjusted~as.numeric(date),data=wmt_data,span=wmt_optimal_span)
 smooth_wmt<-predict(loess_wmt)
 trend_decomp_wmt_plot<-wmt_data|>ggplot(aes(x=date))+geom_line(aes(y=smooth_wmt),color="red",linewidth=1.4) +
-                                 labs(title="WMT Trend Decomposition",x="Date",y="Stock Price") +
+                                 labs(title="WMT Trend Decomposition",x="Date",y="Stock Price (USD)") +
                                  theme_minimal()
 trend_decomp_wmt_plot
 wmt_data$residual_decomp<-residuals(loess_wmt)
@@ -203,7 +203,7 @@ wmt_data
 loess_jnj<-loess(adjusted~as.numeric(date),data=jnj_data,span=jnj_optimal_span)
 smooth_jnj<-predict(loess_jnj)
 trend_decomp_jnj_plot<-jnj_data|>ggplot(aes(x=date))+geom_line(aes(y=smooth_jnj),color="red",linewidth=1.4) +
-                                 labs(title="JNJ Trend Decomposition",x="Date",y="Stock Price") +
+                                 labs(title="JNJ Trend Decomposition",x="Date",y="Stock Price (USD)") +
                                  theme_minimal()
 trend_decomp_jnj_plot
 jnj_data$residual_decomp<-residuals(loess_jnj)
